2007-01-30  Akira TAGOH  <tagoh@redhat.com>

	Translation updates release.

	* configure.ac: bumped to 0.3.4.

2006-10-07  Akira TAGOH  <at@gclab.org>

	* configure.ac: remove AM_GLIB_DEFINE_LOCALEDIR.

	* src/Makefile.am (INCLUDES): added IMCHOOSE_LOCALEDIR.

	* data/xinput.sh: fallback to read /etc/default/locale if there are no
	/etc/profile.d/lang.sh.

2006-10-02  Akira TAGOH  <at@gclab.org>

	Translation updates release.

	* configure.ac: bumped to 0.3.3.

2006-09-08  Akira TAGOH  <at@gclab.org>

	* configure.ac: bumped to 0.3.2.

	* data/im-chooser.png: added an icon from Andrew Fitzsimon

	* src/main.c (main): show the window icon.

	* src/im-chooser.desktop.in.in (Icon): added icon.

2006-08-29  Akira TAGOH  <at@gclab.org>

	* src/im-chooser.c (_im_chooser_set_menu_from_im_table): check
	the suffix thing too.

2006-08-25  Akira TAGOH  <at@gclab.org>

	* src/im-chooser.desktop.in.in: removed MimeType.

2006-08-15  Akira TAGOH  <at@gclab.org>

	* configure.ac: bumped to 0.3.1.

	* src/main.c (_real_style_set): override spacings.

2006-08-07  Akira TAGOH  <at@gclab.org>

	* src/main.c (main): add an icon to the log out button.
	make a window to not resizable.
	adjusted the border inside the window.

	* src/im-chooser.c (im_chooser_get_widget): adjust a padding for
	header.

	* src/main.c (main): hide a separator.

	* data/xim.in.in: fixed to reflect --xinputdir option.

	* data/none.in.in: likewise.

	* data/Makefile.am: install with the suffix.

2006-07-25  Akira TAGOH  <at@gclab.org>

	* src/im-chooser.c (im_chooser_get_widget): fixed a typo.

2006-07-24  Akira TAGOH  <at@gclab.org>

	* src/xinput.c (xinput_get_im_list): exactly lookup with the suffix.

	* src/im-chooser.c (im_chooser_instance_init): put the xinput name
	without the suffix.
	(im_chooser_update_xinputrc): make a symlink with the suffix.

	* src/xinput.c (xinput_get_im_list): lookup the xiput file with
	the suffix.

	* src/im-chooser.c (im_chooser_get_widget): fixed to make