@@ -1,3 +1,9 @@
+2007-07-18  Akira TAGOH  <tagoh@redhat.com>
+
+	* data/xinput.sh.in: Update to not bringing IM up actually.
+
+	* configure.ac: Generate xinput.sh.
+
 2007-01-30  Akira TAGOH  <tagoh@redhat.com>
 
 	Translation updates release.
